# Coeus

./: CHECKLIST.md  PRD.md  README.md
rustllm-core/: .gitignore  ARCHITECTURE.md  Cargo.toml  ITERATOR_FIXES.md  LICENSE  REFACTORING_SUMMARY.md  rustfmt.toml
rustllm-core/benches/: advanced_iterator_bench.rs  iterator_bench.rs  tokenizer_bench.rs
rustllm-core/examples/: basic_usage.rs  config_usage.rs  diffusion_example.rs  enhanced_transformer.rs  streaming.rs  test_iterators.rs  training_example.rs  transformer_250m.rs  wordpiece_tokenizer.rs
rustllm-core/plugins/loader-basic/: Cargo.toml
rustllm-core/plugins/loader-basic/src/: lib.rs
rustllm-core/plugins/model-basic/: Cargo.toml
rustllm-core/plugins/model-basic/src/: lib.rs
rustllm-core/plugins/model-transformer/: Cargo.toml
rustllm-core/plugins/model-transformer/src/: lib.rs
rustllm-core/plugins/tokenizer-basic/: Cargo.toml
rustllm-core/plugins/tokenizer-basic/src/: lib.rs
rustllm-core/plugins/tokenizer-bpe/: Cargo.toml
rustllm-core/plugins/tokenizer-bpe/src/: lib.rs
rustllm-core/plugins/tokenizer-wordpiece/: Cargo.toml
rustllm-core/plugins/tokenizer-wordpiece/benches/: wordpiece_bench.rs
rustllm-core/plugins/tokenizer-wordpiece/src/: lib.rs
rustllm-core/src/: lib.rs
rustllm-core/src/core/: config.rs  mod.rs  model.rs  plugin.rs  serialization.rs  tokenizer.rs  traits.rs
rustllm-core/src/domain/: mod.rs
rustllm-core/src/domain/inference/: mod.rs
rustllm-core/src/domain/modeling/: mod.rs
rustllm-core/src/domain/persistence/: mod.rs
rustllm-core/src/domain/tokenization/: mod.rs
rustllm-core/src/domain/training/: mod.rs
rustllm-core/src/foundation/: error.rs  iterator.rs  memory.rs  types.rs
rustllm-core/src/plugins/: manager.rs  registry.rs
rustllm-core/tests/: integration_tests.rs
