[package]
name = "rustllm-model-basic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Basic model plugin for RustLLM Core"
repository = "https://github.com/rustllm/rustllm-core"
readme = "README.md"
keywords = ["llm", "model", "plugin", "neural-network", "ml"]
categories = ["science", "algorithms"]

[dependencies]
rustllm-core = { path = "../.." }

[lib]
name = "rustllm_model_basic"
path = "src/lib.rs"