[package]
name = "rustllm-model-transformer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Transformer model plugin for RustLLM Core"
repository = "https://github.com/rustllm/rustllm-core"
readme = "README.md"
keywords = ["llm", "transformer", "plugin", "attention", "ml"]
categories = ["science", "algorithms"]

[dependencies]
rustllm-core = { path = "../.." }

[lib]
name = "rustllm_model_transformer"
path = "src/lib.rs"
