[package]
name = "rustllm-tokenizer-basic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Basic tokenizer plugin for RustLLM Core"
repository = "https://github.com/rustllm/rustllm-core"
readme = "README.md"
keywords = ["llm", "tokenizer", "plugin", "nlp", "text"]
categories = ["text-processing", "parser-implementations"]

[dependencies]
rustllm-core = { path = "../.." }

[lib]
name = "rustllm_tokenizer_basic"
path = "src/lib.rs"