[package]
name = "rustllm-tokenizer-bpe"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "BPE tokenizer plugin for RustLLM Core"
repository = "https://github.com/rustllm/rustllm-core"
readme = "README.md"
keywords = ["llm", "tokenizer", "bpe", "nlp", "text"]
categories = ["text-processing", "parser-implementations"]

[dependencies]
rustllm-core = { path = "../.." }

[lib]
name = "rustllm_tokenizer_bpe"
path = "src/lib.rs"
