[package]
name = "rustllm-tokenizer-wordpiece"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WordPiece tokenizer plugin for RustLLM Core"
repository = "https://github.com/rustllm/rustllm-core"
readme = "README.md"
keywords = ["llm", "tokenizer", "wordpiece", "nlp", "text"]
categories = ["text-processing", "parser-implementations"]

[dependencies]
rustllm-core = { path = "../../", features = ["std"] }
unicode-normalization = "0.1"
unicode-segmentation = "1.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "wordpiece_bench"
harness = false

[features]
default = ["std"]
std = []
